@@ -115,6 +115,8 @@ Enhancements
   * PersistenceLength.plot() now create new axes if current axes not provided (Issue #2590)
 
 Changes
+  * Use `np.clip()` to counter the rounding off error in `mdamath.angles` and 
+    added `test_angle_lower_clip` in `test_util.py` (Issue #2632, PR #2634)
   * Deprecated :class:`ProgressMeter` and replaced it with :class:`ProgressBar` using
     the tqdm package (Issue #928, PR #2617). Also fixes issue #2504.
   * Removed `details` from `ClusteringMethod`s (Issue #2575, PR #2620)
